// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Styled(div)>
  <h3>
    <div
      className="badge"
    >
      hotspots.status_option.TO_REVIEW
    </div>
  </h3>
  <div
    className="little-spacer-top"
  >
    hotspots.status_option.TO_REVIEW.description
  </div>
</Styled(div)>
`;

exports[`should render correctly: with title 1`] = `
<Styled(div)>
  <h3>
    status: 
    <div
      className="badge"
    >
      hotspots.status_option.TO_REVIEW
    </div>
  </h3>
  <div
    className="little-spacer-top"
  >
    hotspots.status_option.TO_REVIEW.description
  </div>
</Styled(div)>
`;

exports[`should render correctly: without status in badge 1`] = `
<Styled(div)>
  <h3>
    <div>
      hotspots.status_option.TO_REVIEW
    </div>
  </h3>
  <div
    className="little-spacer-top"
  >
    hotspots.status_option.TO_REVIEW.description
  </div>
</Styled(div)>
`;
